# My_Gemm

./: CMakeLists.txt  README.md  make_graph.py
include/: gemm.h  stuff_for_matrix .h
src/: gemm.cpp  main.cpp  stuff_for_matrix.cpp
